# analise_data_ru

./: .gitignore  README.md  pyproject.toml
analise_data_ru/: __init__.py  config.py  models.py  plot.py  run_models.py
analise_data_ru/view/: data.py  data_app.py
analise_data_ru/view/pages/: custom_prediction.py  data_analysis.py  regression.py  time_series.py
data/processed/: final_base.csv  final_base_2.csv  pre_final_base.csv  test_data.csv  train_data.csv
data/raw/: Quantitativo RU_Sobral .xlsx  data_ru.csv
models/: KRR_almoco.plk  KRR_janta.plk  MLP_regr_almoco.plk  MLP_regr_janta.plk  best_model_janta_otimizado.plk
notebooks/: TrabalhoFinal.ipynb  notebook1.ipynb  notebook2.ipynb  notebook3.ipynb  notebook4.ipynb  notebook5.ipynb
